<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="32dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/login_title"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/login_email"
            android:inputType="text"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:boxBackgroundMode="filled"
            app:hintTextColor="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_textinput"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:boxBackgroundMode="filled"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_textinput"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnter"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/login_enter"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/mainOrange"
            android:layout_margin="32dp"
            app:cornerRadius="32dp"
            android:textColor="@color/white"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/btnEnter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:dividerColor="@color/white"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/tvForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget"
            app:layout_constraintTop_toBottomOf="@id/dividerLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_create"
            app:layout_constraintTop_toBottomOf="@id/tvForget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:layout_marginTop="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
