<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.CrearFragment"
    android:background="@drawable/crear_bg">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_crear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="32dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@+id/cvHoraInicio"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainOrange"
            android:padding="8dp">
            <TextView
                android:id="@+id/tvDia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/crear_selectDia"
                android:textColor="@color/white"
                android:layout_weight="7"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/selectdia"
                android:background="@android:color/transparent"
                android:layout_weight="2"
                android:focusable="false"
                android:clickable="false"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHoraInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cvDia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@+id/cvHoraSalida"
        android:textColor="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainOrange"
            android:padding="8dp">
            <TextView
                android:id="@+id/tvHoraInicio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/crear_selectHoraEntrada"
                android:textColor="@color/white"
                android:layout_weight="7"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/selecthora"
                android:background="@android:color/transparent"
                android:layout_weight="2"
                android:focusable="false"
                android:clickable="false"
                app:tint="@color/white"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHoraSalida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvHoraInicio">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainOrange"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvHoraSalida"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/crear_selectHoraSalida"
                android:textColor="@color/white" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/selecthora"
                app:tint="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSeleccionar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/crear_select_plaza"
        app:layout_constraintTop_toBottomOf="@+id/cvHoraSalida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/mainOrange"
        android:layout_marginHorizontal="32dp"
        app:cornerRadius="32dp"
        android:textColor="@color/white"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCrear"
        android:layout_marginVertical="64dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCrear"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/mainOrange"
        android:text="@string/crear_reserrva"
        android:textColor="@color/white"
        app:cornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSeleccionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>